# chexquest-vita

./: CMakeLists.txt  README.md  doomgeneric_vita.c  generate_assets.sh  sanitize_pngs.sh
.github/workflows/: CMakeLists.txt  build.yml
sce_sys/livearea/contents/: template.xml
scripts/: gen_assets.py  prepare.sh
src/: d_event.h  d_player.h  d_think.h  d_ticcmd.h  doomdata.h  doomdef.h  doomstat.h  doomtype.h  info.h  m_argv.c  m_argv.h  m_bbox.c  m_bbox.h  m_fixed.c  m_fixed.h  m_random.c  m_random.h  m_swap.h  tables.c  tables.h
vita/: doomgeneric_vita.c  i_input_vita.c  i_sound_vita.c  i_system_vita.c  i_video_vita.c  patch_chex.sh  vita_config.h  vita_main.c
